Fixed the floating content on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,11 @@
     color: #a90329;
 }
 
+.clear
+{
+    clear:both;
+}
+
 
 #bigCallout
 {
